my-apps/karakeep/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karakeep-web
  template:
    metadata:
      labels:
        app: karakeep-web
    spec:
      containers:
        - name: web
          image: ghcr.io/karakeep-app/karakeep:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            requests:
              memory: "256Mi" # 256MB of memory
              cpu: "250m"     # .25 cpu cores
            limits:
              memory: "1Gi" # 1GB of memory
              cpu: "1000m" # 1 cpu core
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
