my-apps/karakeep/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-service
  namespace: karakeep
spec:
  selector:
    app: karakeep-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: LoadBalancer
